# thegent-metrics

./: ADR.md  AGENTS.md  CLAUDE.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  GEMINI.md  PLAN.md  PRD.md  README.md  SPEC.md  codecov.yml  gitleaks.toml  worklog.md
.github/workflows/: ci.yml
docs/plans/: AGILEPLUS_SPEC.md  KILO_GASTOWN_SPEC.md
kitty-specs/001-metrics-collection/: plan.md  spec.md
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/json/: mod.rs
src/adapters/prometheus/: mod.rs
src/application/: mod.rs
src/application/commands/: mod.rs
src/application/queries/: mod.rs
src/application/use_cases/: mod.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs
src/domain/events/: mod.rs
src/domain/value_objects/: mod.rs
src/ports/: mod.rs
src/ports/driven/: mod.rs
src/ports/driving/: mod.rs
src/specs/: mod.rs
